# autocRust

./: Cargo.toml  build.rs
cert/: openssl.cnf  server.crt  server.key
proto/: vehicle_status.proto
src/: client.rs  server.rs
