[package]
name = "rust_async_system"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.9.2", features = ["tls"] }
prost = "0.11.9"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1.14"
chrono = "0.4.24"
chrono-tz = "0.8.2"
thiserror = "1.0.40"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"